--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,8 +26,8 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: -34.397, lng: 150.644 },
-          zoom: 8,
+          center: { lat: 43.59054917118941, lng: -80.24731851700732},  
+          zoom: 10,
         });
       }
     </script>
