--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Geolocation</title>
+    <title>Localizing the Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -17,9 +17,7 @@
       for more information.
       -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
-
-=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly&language=ja&region=JP"
       defer
     ></script>
   </body>
