--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -17,7 +17,9 @@
       for more information.
       -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly&language=ja&region=JP"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
+
+&callback=initMap&v=weekly&language=ja&region=JP"
       defer
     ></script>
   </body>
