--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -10,7 +10,9 @@
     <div id="map"></div>
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
+      defer
+
 
 
     ></script>
