--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -19,7 +19,7 @@
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
 
-&callback=initMap&v=weekly&language=ja&region=JP"
+&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
