--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -7,6 +7,25 @@
       const process = { env: {} };
       process.env.GOOGLE_MAPS_API_KEY =
         "AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w";
+      /* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+#map {
+  height: 100%;
+}
+
+/* 
+ * Optional: Makes the sample page fill the window. 
+ */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
     </script>
     <!-- playground-hide-end -->
 
