--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -11,11 +11,27 @@
 
 
 ";
+  
     </script>
     <!-- playground-hide-end -->
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="./index.js"></script>
+  
+    <script type="module" src="./index.js">
+#map {
+  height: 100%;
+}
+
+/* 
+ * Optional: Makes the sample page fill the window. 
+ */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+      
+    </script>
   </head>
   <body>
     <div id="map"></div>
