--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -6,7 +6,7 @@
     <script>
       const process = { env: {} };
       process.env.GOOGLE_MAPS_API_KEY =
-        AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE
+        "AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE
 
 
 
