--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -1,20 +1,15 @@
 <html>
   <head>
-    <title>Advanced Marker Accessibility</title>
+    <title>Advanced Markers Using Graphics</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <!-- playground-hide -->
-    <script>
-      const process = { env: {} };
-      process.env.GOOGLE_MAPS_API_KEY =
-        "AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
 
-";
-  
-    </script>
-    <!-- playground-hide-end -->
 
-  
     <script type="module" src="./index.js">
+/* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
 #map {
   height: 100%;
 }
@@ -28,8 +23,12 @@ body {
   margin: 0;
   padding: 0;
 }
+
+
+
       
     </script>
+    
   </head>
   <body>
     <div id="map"></div>
@@ -38,10 +37,6 @@ body {
     <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w
 
-
-
-
-
-", v: "weekly"});</script>
+", v: "beta"});</script>
   </body>
 </html>
