--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -3,8 +3,25 @@
     <title>Advanced Marker Accessibility</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+  
     <script type="module" src="./index.js"></script>
+
+    <style>
+#map {
+  height: 100%;
+}
+
+/* 
+ * Optional: Makes the sample page fill the window. 
+ */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+      
+    </style>
   </head>
   <body>
     <div id="map"></div>
