--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Advanced Markers Using Graphics</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
