--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-/* inspiration for the design was taken from 
+<!-- inspiration for the design was taken from 
 https://github.com/googlemaps/js-samples/tree/main/samples/advanced-markers-graphics
-https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple */
+https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
   <head>
     <title>A life Story of Steve Irwin
     </title>
-    /* using polyfill to allow the website to be compaitible with older browsers */
-    /* using font awesome graphics to stylize the markers */
+    <!-- using polyfill to allow the website to be compaitible with older browsers -->
+    <!-- using font awesome graphics to stylize the markers -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
 
- /* linking the java code to the webpage */
+ <!-- linking the java code to the webpage -->
     <script type="module" src="./index.js"></script>
     <style>
 
-      /* using a height of 100% so the map takes up the entire page */
+      <!-- using a height of 100% so the map takes up the entire page -->
 #map {
   height: 100%;
 }
@@ -31,10 +31,10 @@ body {
     </style>
   </head>
   <body>
-    /* adding the div which contains all the map data and information into the web page */
+    <!-- adding the div which contains all the map data and information into the web page -->
     <div id="map"></div>
 
-    <!-- prettier-ignore -->
+    <!-- adding in the google maps API key -->
     <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w", v: "beta"});</script>
   </body>
