--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -3,7 +3,7 @@
 https://github.com/googlemaps/js-samples/tree/main/samples/advanced-markers-graphics
 https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
   <head>
-    <title>A life Story of Steve Irwin
+    <title>A life Story of Steve Irwin </title>
     </title>
     <!-- using polyfill to allow the website to be compaitible with older browsers -->
     <!-- using font awesome graphics to stylize the markers -->
