--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -16,7 +16,12 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
 #map {
   height: 100%;
 }
-
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
  
 
       
