--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -12,7 +12,8 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
     <script type="module" src="./index.js"></script>
     <style>
 
-  
+  <!-- setting the height of the map id to 100% as well as the body to 100% so it fills up the 
+      screen, also turning margins and padding to 0 so that the entire screen is covered-->
 #map {
   height: 100%;
 }
