--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -11,9 +11,7 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <script type="module" src="./index.js"></script>
     <style>
-
-  <!-- setting the height of the map id to 100% as well as the body to 100% so it fills up the 
-      screen, also turning margins and padding to 0 so that the entire screen is covered-->
+  <!-- giving the map a height and turnign padding and margins to 0 so the map takes up entire webpage  -->
 #map {
   height: 100%;
 }
