--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -11,7 +11,7 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <script type="module" src="./index.js"></script>
     <style>
-  <!-- giving the map a height and turnign padding and margins to 0 so the map takes up entire webpage  -->
+  <!-- giving the map a height and reducing padding and margins to 0 so the map takes up entire webpage  -->
 #map {
   height: 100%;
 }
@@ -30,7 +30,7 @@ body {
     <!-- adding the div which contains all the map data and information into the web page -->
     <div id="map"></div>
 
-    <!-- adding in the google maps API key -->
+    <!-- adding in the google maps API key and calling the init function  -->
     <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w", v: "beta"});</script>
   </body>
