--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -11,12 +11,10 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <script type="module" src="./index.js"></script>
     <style>
-  <!-- giving the map a height and reducing padding and margins to 0 so the map takes up entire webpage  -->
+  <!-- giving the map a height and reducing padding and margins to 0 so the map takes up entire page  -->
 #map {
-  height: 100%;
-}
-html,
-body {
+  height: 100%;}
+html,body {
   height: 100%;
   margin: 0;
   padding: 0;
