--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -10,8 +10,11 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <script type="module" src="./index.js"></script>
+<!-- giving the height of the map 100% so it takes up the maximum amoutn of space, as well as
+    gettign rid of any margins or paddings in the body  as well as giving it the max height to ensure
+    the map takes up all available space on the webpage-->
     <style>
- 
+
 #map {
   height: 100%;}
 html,body {
