--- a/story/crocodilehunter.html
+++ b/story/crocodilehunter.html
@@ -5,13 +5,13 @@ https://github.com/googlemaps/js-samples/tree/main/samples/infowindow-simple -->
   <head>
     <title>A life Story of Steve Irwin </title>
    
-    <!-- using polyfill to allow the website to be compaitible with older browsers -->
+    <!-- using polyfill to allow the website to be compatible  with older browsers -->
     <!-- using font awesome graphics to stylize the markers -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <script type="module" src="./index.js"></script>
-<!-- giving the height of the map 100% so it takes up the maximum amoutn of space, as well as
-    gettign rid of any margins or paddings in the body  as well as giving it the max height to ensure
+<!-- giving the height of the map 100% so it takes up the maximum amount of space, as well as
+    getting rid of any margins or paddings in the body  as well as giving it the max height to ensure
     the map takes up all available space on the webpage-->
     <style>
 
